--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.2.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.6.2",
     "typescript": "^4.9.5",
     "use-resize-observer": "^9.1.0",
