--- a/package.json
+++ b/package.json
@@ -3,21 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@mantine/carousel": "^7.1.2",
-    "@mantine/code-highlight": "^7.1.2",
-    "@mantine/core": "^7.1.2",
-    "@mantine/dates": "^7.1.2",
-    "@mantine/dropzone": "^7.1.2",
-    "@mantine/ds": "^6.0.17",
-    "@mantine/form": "^7.1.2",
-    "@mantine/hooks": "^7.1.2",
-    "@mantine/modals": "^7.1.2",
-    "@mantine/notifications": "^7.1.2",
-    "@mantine/nprogress": "^7.1.2",
-    "@mantine/prism": "^6.0.17",
-    "@mantine/spotlight": "^7.1.2",
-    "@mantine/tiptap": "^7.1.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mantine/core": "^7.4.2",
+    "@mantine/dates": "^7.4.2",
+    "@mantine/form": "^7.4.2",
+    "@mantine/hooks": "^7.4.2",
+    "@mantine/modals": "^7.4.2",
+    "@mantine/notifications": "^7.4.2",
+    "@mantine/nprogress": "^7.4.2",
     "@react-google-maps/api": "^2.19.2",
     "@tabler/icons-react": "^2.38.0",
     "@tanstack/match-sorter-utils": "^8.8.4",
@@ -40,6 +35,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0-rc14",
+    "framer-motion": "^11.0.1",
     "google-map-react": "^2.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -83,8 +79,8 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.8.0",
+    "postcss": "^8.4.33",
+    "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
     "react-app-rewired": "^2.2.1",
     "react-test-renderer": "^18.2.0",
